--- a/smart-farm-frontend/src/app/app.component.html
+++ b/smart-farm-frontend/src/app/app.component.html
@@ -10,7 +10,7 @@
     <div class="sidebar-logo">
       <a target="_blank">
         <img src="../assets/images/kku_logo.png" alt="logo" />
-        <h1>Hello Wolrd</h1>
+        <span class="menu-label">KKU SMART FARM</span>
       </a>
     </div>
     <ul
@@ -19,21 +19,13 @@
       nzMode="inline"
       [nzInlineCollapsed]="isCollapsed"
     >
-      <li nz-menu-item>
-        <i nz-icon nzType="user"></i>
-        <span>nav 1</span>
+      <li class="menu-item" nz-menu-item>
+        <i nz-icon nzType="home"></i>
+        <span class="menu-label">หน้าหลัก</span>
       </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="video-camera"></i>
-        <span>nav 2</span>
-      </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="upload"></i>
-        <span>nav 3</span>
-      </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="user"></i>
-        <span>nav 4</span>
+      <li class="menu-item" nz-menu-item>
+        <i nz-icon nzType="logout"></i>
+        <span class="menu-label">ออกจากระบบ</span>
       </li>
     </ul>
   </nz-sider>
