--- a/smart-farm-frontend/src/app/app.component.scss
+++ b/smart-farm-frontend/src/app/app.component.scss
@@ -25,33 +25,29 @@
 }
 
 .trigger:hover {
-  color: #1890ff;
+  color: #16528a;
 }
 
 .sidebar-logo {
   position: relative;
-  height: 64px;
+  height: 120px;
   padding-left: 24px;
   overflow: hidden;
-  line-height: 64px;
-  background: #001529;
+  line-height: 120px;
+  background: #a73b24;
   transition: all 0.3s;
 }
 
 .sidebar-logo img {
   display: inline-block;
-  height: 32px;
   width: 32px;
   vertical-align: middle;
+  margin-right: 20px;
 }
 
-.sidebar-logo h1 {
-  display: inline-block;
-  margin: 0 0 0 20px;
+.sidebar-logo span {
   color: #fff;
   font-weight: 600;
-  font-size: 14px;
-  font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
   vertical-align: middle;
 }
 
@@ -75,6 +71,33 @@ nz-content {
 
 .inner-content {
   padding: 24px;
-  background: #fff;
+  background: #f0f2f5;
   height: 100%;
+}
+
+.menu-item {
+  // background-color: #07cf00;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.219);
+  }
+}
+
+.ant-menu-item-selected {
+  background-color: rgba(255, 255, 255, 0.219) !important;
+  border-left: solid 3px #ffffff;
+}
+
+[nz-icon] {
+  margin-right: 6px;
+  font-size: 24px;
+}
+
+fa-icon {
+  margin-right: 6px;
+  font-size: 24px;
+}
+
+.menu-label {
+  font-size: 20px;
 }
