--- a/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
+++ b/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,122 @@
-<H1>Welcome !!!</H1>
+<div class="">
+  <div class="row g-3">
+    <div class="col-8">
+      <mat-card class="chart">
+        <div
+          class="d-flex flex-column justify-content-center align-items-center"
+        >
+          <div>This is chart</div>
+          <div>This is chart</div>
+          <div>This is chart</div>
+          <div>This is chart</div>
+          <div>This is chart</div>
+          <div>This is chart</div>
+        </div>
+      </mat-card>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-6">
+          <mat-card>
+            <div class="d-flex justify-content-end pb-3">
+              <mat-icon aria-hidden="false" aria-label="Example home icon"
+                >thermostat</mat-icon
+              >
+            </div>
+            <div
+              class="d-flex flex-column justify-content-center align-items-center"
+            >
+              <div class="value-number pt-4 py-5">{{ temperature }} °C</div>
+              <div class="value-label pb-4">อุณหภูมิ</div>
+            </div>
+          </mat-card>
+        </div>
+
+        <div class="col-6">
+          <mat-card>
+            <div class="d-flex justify-content-end pb-3">
+              <mat-icon aria-hidden="false" aria-label="Example home icon"
+                >opacity</mat-icon
+              >
+            </div>
+            <div
+              class="d-flex flex-column justify-content-center align-items-center"
+            >
+              <div class="value-number pt-4 py-5">{{ humidity }} %</div>
+              <div class="value-label pb-4">ความชื้น</div>
+            </div>
+          </mat-card>
+        </div>
+
+        <div class="pt-3"></div>
+
+        <div class="col-6">
+          <mat-card>
+            <div class="d-flex justify-content-end pb-3">
+              <mat-icon aria-hidden="false" aria-label="Example home icon"
+                >opacity</mat-icon
+              >
+            </div>
+            <div
+              class="d-flex flex-column justify-content-center align-items-center"
+            >
+              <div class="value-number pt-4 py-5">{{ dirtMoisture }} %</div>
+              <div class="value-label pb-4">ความชื้นดิน</div>
+            </div>
+          </mat-card>
+        </div>
+
+        <div class="col-6">
+          <mat-card>
+            <div class="d-flex justify-content-end pb-3">
+              <mat-icon aria-hidden="false" aria-label="Example home icon"
+                >air</mat-icon
+              >
+            </div>
+            <div
+              class="d-flex flex-column justify-content-center align-items-center"
+            >
+              <div class="value-number pt-4 py-5">{{ windSpeed }} m/s</div>
+              <div class="value-label pb-4">ความเร็วลม</div>
+            </div>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row g-3 pt-5">
+    <div *ngFor="let relay of relays" class="col-3">
+      <mat-card
+        (click)="toggleSwitch(relay.name, relay.status, relay.index)"
+        matRipple
+        [matRippleCentered]="true"
+      >
+        <div
+          class="d-flex flex-column justify-content-center align-items-center m-5"
+        >
+          <div *ngIf="relay.status == 'ON'" class="light-on-icon">
+            <mat-icon
+              aria-hidden="false"
+              aria-label="Example home icon"
+              [inline]="true"
+              >lightbulb</mat-icon
+            >
+          </div>
+
+          <div *ngIf="relay.status == 'OFF'" class="light-off-icon">
+            <mat-icon
+              aria-hidden="false"
+              aria-label="Example home icon"
+              [inline]="true"
+              >lightbulb</mat-icon
+            >
+          </div>
+
+          <div class="relay value-label py-5 noselect">{{ relay.name }}</div>
+          <div class="relay value-label noselect">{{ relay.status }}</div>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+</div>
