--- a/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
+++ b/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <div class="">
   <div class="row g-3">
-    <div class="col-8">
+    <div class="col">
       <mat-card class="chart">
         <div
           class="d-flex flex-column justify-content-center align-items-center"
@@ -9,8 +9,8 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-4">
-      <div class="row">
+    <div class="col">
+      <div class="row g-3">
         <div class="col-6">
           <mat-card>
             <div class="d-flex justify-content-end pb-3">
@@ -21,7 +21,7 @@
             <div
               class="d-flex flex-column justify-content-center align-items-center"
             >
-              <div class="value-number text-nowrap pt-4 py-5">
+              <div class="value-number text-nowrap pt-5 py-5">
                 {{ temperature }} °C
               </div>
               <div class="value-label pb-4">อุณหภูมิ</div>
@@ -39,7 +39,7 @@
             <div
               class="d-flex flex-column justify-content-center align-items-center"
             >
-              <div class="value-number text-nowrap pt-4 py-5">
+              <div class="value-number text-nowrap pt-5 py-5">
                 {{ humidity }} %
               </div>
               <div class="value-label pb-4">ความชื้น</div>
@@ -47,9 +47,9 @@
           </mat-card>
         </div>
 
-        <div class="pt-3"></div>
+        <!-- <div class="pt-3"></div> -->
 
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <mat-card>
             <div class="d-flex justify-content-end pb-3">
               <mat-icon aria-hidden="false" aria-label="Example home icon"
@@ -59,7 +59,7 @@
             <div
               class="d-flex flex-column justify-content-center align-items-center"
             >
-              <div class="value-number text-nowrap pt-4 py-5">
+              <div class="value-number text-nowrap pt-5 py-5">
                 {{ dirtMoisture }} %
               </div>
               <div class="value-label pb-4">ความชื้นดิน</div>
@@ -67,7 +67,7 @@
           </mat-card>
         </div>
 
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <mat-card>
             <div class="d-flex justify-content-end pb-3">
               <mat-icon aria-hidden="false" aria-label="Example home icon"
@@ -77,7 +77,7 @@
             <div
               class="d-flex flex-column justify-content-center align-items-center"
             >
-              <div class="value-number text-nowrap pt-4 py-5">
+              <div class="value-number text-nowrap pt-5 py-5">
                 {{ windSpeed }} m/s
               </div>
               <div class="value-label pb-4">ความเร็วลม</div>
@@ -88,9 +88,10 @@
     </div>
   </div>
 
-  <div class="row g-3 pt-5">
-    <div *ngFor="let relay of relays" class="col-3">
+  <div class="row g-3 pt-4">
+    <div *ngFor="let relay of relays" class="col">
       <mat-card
+        class="card-switch"
         (click)="toggleSwitch(relay.name, relay.status, relay.index)"
         matRipple
         [matRippleCentered]="true"
@@ -98,7 +99,11 @@
         <div
           class="d-flex flex-column justify-content-center align-items-center m-5"
         >
-          <div *ngIf="relay.status == 'ON'" class="light-on-icon">
+          <div
+            class="light-on-icon"
+            [class.light-on-icon]="relay.status"
+            [class.light-off-icon]="!relay.status"
+          >
             <mat-icon
               aria-hidden="false"
               aria-label="Example home icon"
@@ -107,19 +112,70 @@
             >
           </div>
 
-          <div *ngIf="relay.status == 'OFF'" class="light-off-icon">
-            <mat-icon
-              aria-hidden="false"
-              aria-label="Example home icon"
-              [inline]="true"
-              >lightbulb</mat-icon
-            >
+          <div class="relay value-label pt-5 pb-2 noselect">
+            {{ relay.name }}
           </div>
-
-          <div class="relay value-label py-5 noselect">{{ relay.name }}</div>
-          <div class="relay value-label noselect">{{ relay.status }}</div>
+          <div *ngIf="relay.status" class="relay value-label noselect">ON</div>
+          <div *ngIf="!relay.status" class="relay value-label noselect">
+            OFF
+          </div>
         </div>
       </mat-card>
+    </div>
+  </div>
+
+  <div class="row g-3 pt-3">
+    <div class="col">
+      <mat-card
+        (click)="doTimeSet()"
+        matRipple
+        [matRippleCentered]="true"
+        class="card-switch"
+        ><div
+          class="d-flex justify-content-center align-items-center value-label"
+        >
+          <div class="text-nowrap">เพิ่มตั้งค่าเวลา เปิด/ปิด รีเลย์</div>
+        </div></mat-card
+      >
+    </div>
+    <div class="col">
+      <mat-card
+        (click)="doDeviceSetting()"
+        matRipple
+        [matRippleCentered]="true"
+        class="card-switch"
+        ><div
+          class="d-flex justify-content-center align-items-center value-label"
+        >
+          <div class="text-nowrap">เพิ่มตั้งค่าอุณหภูมิ</div>
+        </div></mat-card
+      >
+    </div>
+    <div class="col">
+      <mat-card
+        (click)="doDeviceList()"
+        matRipple
+        [matRippleCentered]="true"
+        class="card-switch"
+        ><div
+          class="d-flex justify-content-center align-items-center value-label"
+        >
+          <div class="text-nowrap">จัดการการตั้งค่าอุปกรณ์</div>
+        </div></mat-card
+      >
+    </div>
+    <div class="col">
+      <mat-card
+        (click)="doSystemSetting()"
+        matRipple
+        [matRippleCentered]="true"
+        class="card-switch"
+        ><div
+          class="d-flex justify-content-center align-items-center value-label"
+        >
+          <div class="text-nowrap">ตั้งค่าระบบ</div>
+        </div></mat-card
+      >
     </div>
   </div>
 </div>
