--- a/smart-farm-frontend/src/app/_components/dialog-system-setting/dialog-system-setting.component.html
+++ b/smart-farm-frontend/src/app/_components/dialog-system-setting/dialog-system-setting.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-title class="text-center fs-3">เพิ่มตั้งค่าอุณหภูมิ</div>
+<div mat-dialog-title class="text-center fs-3">ตั้งค่าระบบ</div>
 <div mat-dialog-content>
   <div class="fs-5 pb-2 pt-3">ชื่อ Wifi</div>
   <mat-form-field appearance="outline">
