--- a/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
+++ b/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
@@ -49,7 +49,7 @@
 
         <!-- <div class="pt-3"></div> -->
 
-        <div class="col-sm-12 col-md-6">
+        <div class="col">
           <mat-card>
             <div class="d-flex justify-content-end pb-3">
               <mat-icon aria-hidden="false" aria-label="Example home icon"
@@ -67,7 +67,7 @@
           </mat-card>
         </div>
 
-        <div class="col-sm-12 col-md-6">
+        <!-- <div class="col-sm-12 col-md-6">
           <mat-card>
             <div class="d-flex justify-content-end pb-3">
               <mat-icon aria-hidden="false" aria-label="Example home icon"
@@ -83,7 +83,7 @@
               <div class="value-label pb-4">ความเร็วลม</div>
             </div>
           </mat-card>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
