--- a/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
+++ b/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
@@ -14,6 +14,7 @@
         <div class="col-6">
           <mat-card>
             <div class="d-flex justify-content-end pb-3">
+              <button type="button" class="btn btn-primary m-3" (click)="onUpload()">Upload</button>
               <mat-icon aria-hidden="false" aria-label="Example home icon"
                 >thermostat</mat-icon
               >
