--- a/smart-farm-frontend/src/app/_components/dialog-add-temp-setting/dialog-add-temp-setting.component.html
+++ b/smart-farm-frontend/src/app/_components/dialog-add-temp-setting/dialog-add-temp-setting.component.html
@@ -2,17 +2,17 @@
 <div mat-dialog-content>
   <div class="fs-5 pb-2 pt-3">อุณหภูมิ (°C)</div>
   <mat-form-field appearance="outline">
-    <input matInput [(ngModel)]="setDevice.temperature" type="number" min="0" />
+    <input matInput [(ngModel)]="setTemp.temperature" type="number" min="0" />
   </mat-form-field>
 
   <div class="fs-5 pb-2 pt-3">เวลาทำงาน (นาที)</div>
   <mat-form-field appearance="outline">
-    <input matInput [(ngModel)]="setDevice.duration" type="number" min="0" />
+    <input matInput [(ngModel)]="setTemp.duration" type="number" min="0" />
   </mat-form-field>
 
   <div class="fs-5 pb-4 pt-3">รีเลย์</div>
   <div class="row pb-2">
-    <div *ngFor="let relay of setDevice.relays" class="col">
+    <div *ngFor="let relay of setTemp.relays" class="col">
       <mat-checkbox class="align-middle" [(ngModel)]="relay.status">{{
         relay.name
       }}</mat-checkbox>
@@ -22,7 +22,5 @@
 <hr />
 <div mat-dialog-actions class="d-flex justify-content-end align-items-center">
   <button mat-stroked-button (click)="onNoClick()">ละทิ้ง</button>
-  <button mat-flat-button color="primary" [mat-dialog-close]="setDevice">
-    บันทึก
-  </button>
+  <button mat-flat-button color="primary" (click)="onSave()">บันทึก</button>
 </div>
