--- a/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
+++ b/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
@@ -13,8 +13,8 @@
       <div class="row g-3">
         <div class="col-6">
           <mat-card>
-            <div class="d-flex justify-content-end pb-3">
-              <button type="button" class="btn btn-primary m-3" (click)="onUpload()">Upload</button>
+            <div class="d-flex justify-content-end">
+              <!-- <button type="button" class="btn btn-primary m-3" (click)="onUpload()">Upload</button> -->
               <mat-icon aria-hidden="false" aria-label="Example home icon"
                 >thermostat</mat-icon
               >
@@ -32,7 +32,7 @@
 
         <div class="col-6">
           <mat-card>
-            <div class="d-flex justify-content-end pb-3">
+            <div class="d-flex justify-content-end">
               <mat-icon aria-hidden="false" aria-label="Example home icon"
                 >opacity</mat-icon
               >
@@ -67,24 +67,6 @@
             </div>
           </mat-card>
         </div>
-
-        <!-- <div class="col-sm-12 col-md-6">
-          <mat-card>
-            <div class="d-flex justify-content-end pb-3">
-              <mat-icon aria-hidden="false" aria-label="Example home icon"
-                >air</mat-icon
-              >
-            </div>
-            <div
-              class="d-flex flex-column justify-content-center align-items-center"
-            >
-              <div class="value-number text-nowrap pt-5 py-5">
-                {{ windSpeed }} m/s
-              </div>
-              <div class="value-label pb-4">ความเร็วลม</div>
-            </div>
-          </mat-card>
-        </div> -->
       </div>
     </div>
   </div>
@@ -128,7 +110,7 @@
   <div class="row g-3 pt-3">
     <div class="col">
       <mat-card
-        (click)="doTimeSet()"
+        (click)="addTimeSetting()"
         matRipple
         [matRippleCentered]="true"
         class="card-switch"
@@ -141,7 +123,7 @@
     </div>
     <div class="col">
       <mat-card
-        (click)="doDeviceSetting()"
+        (click)="addTempSetting()"
         matRipple
         [matRippleCentered]="true"
         class="card-switch"
@@ -154,7 +136,7 @@
     </div>
     <div class="col">
       <mat-card
-        (click)="doDeviceList()"
+        (click)="settingList()"
         matRipple
         [matRippleCentered]="true"
         class="card-switch"
@@ -167,7 +149,7 @@
     </div>
     <div class="col">
       <mat-card
-        (click)="doSystemSetting()"
+        (click)="systemSetting()"
         matRipple
         [matRippleCentered]="true"
         class="card-switch"
