frontend finish -> ready for deployment

--- a/smart-farm-frontend/src/app/app.component.html
+++ b/smart-farm-frontend/src/app/app.component.html
@@ -19,7 +19,7 @@
       nzMode="inline"
       [nzInlineCollapsed]="isCollapsed"
     >
-      <li class="menu-item" nz-menu-item>
+      <li class="menu-item nzSelected" nz-menu-item nzSelected>
         <i nz-icon nzType="home"></i>
         <span class="menu-label">หน้าหลัก</span>
       </li>
