--- a/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
+++ b/smart-farm-frontend/src/app/pages/welcome/welcome.component.html
@@ -1,164 +1,159 @@
-<div class="">
-  <div class="row g-3">
-    <div class="col">
-      <mat-card class="chart">
-        <div
-          class="d-flex flex-column justify-content-center align-items-center"
-        >
-          <app-chart></app-chart>
-        </div>
-      </mat-card>
-    </div>
-    <div class="col">
-      <div class="row g-3">
-        <div class="col-6">
-          <mat-card>
-            <div class="d-flex justify-content-end">
-              <!-- <button type="button" class="btn btn-primary m-3" (click)="onUpload()">Upload</button> -->
-              <mat-icon aria-hidden="false" aria-label="Example home icon"
-                >thermostat</mat-icon
-              >
-            </div>
-            <div
-              class="d-flex flex-column justify-content-center align-items-center"
-            >
-              <div class="value-number text-nowrap pt-5 py-5">
-                {{ temperature }} °C
-              </div>
-              <div class="value-label pb-4">อุณหภูมิ</div>
-            </div>
-          </mat-card>
-        </div>
+<div class="row g-3">
+  <div class="col-12 col-lg-3 col-sm-6">
+    <mat-card
+      (click)="addTimeSetting()"
+      matRipple
+      [matRippleCentered]="true"
+      class="card-switch"
+      ><div
+        class="d-flex justify-content-center align-items-center value-label"
+      >
+        <div class="text-nowrap">เพิ่มตั้งค่าเวลา เปิด/ปิด รีเลย์</div>
+      </div></mat-card
+    >
+  </div>
+  <div class="col-12 col-lg-3 col-sm-6">
+    <mat-card
+      (click)="addTempSetting()"
+      matRipple
+      [matRippleCentered]="true"
+      class="card-switch"
+      ><div
+        class="d-flex justify-content-center align-items-center value-label"
+      >
+        <div class="text-nowrap">เพิ่มตั้งค่าอุณหภูมิ</div>
+      </div></mat-card
+    >
+  </div>
+  <div class="col-12 col-lg-3 col-sm-6">
+    <mat-card
+      (click)="settingList()"
+      matRipple
+      [matRippleCentered]="true"
+      class="card-switch"
+      ><div
+        class="d-flex justify-content-center align-items-center value-label"
+      >
+        <div class="text-nowrap">จัดการการตั้งค่าอุปกรณ์</div>
+      </div></mat-card
+    >
+  </div>
+  <div class="col-12 col-lg-3 col-sm-6">
+    <mat-card
+      (click)="systemSetting()"
+      matRipple
+      [matRippleCentered]="true"
+      class="card-switch"
+      ><div
+        class="d-flex justify-content-center align-items-center value-label"
+      >
+        <div class="text-nowrap">ตั้งค่าระบบ</div>
+      </div></mat-card
+    >
+  </div>
+</div>
+<br />
 
-        <div class="col-6">
-          <mat-card>
-            <div class="d-flex justify-content-end">
-              <mat-icon aria-hidden="false" aria-label="Example home icon"
-                >opacity</mat-icon
-              >
-            </div>
-            <div
-              class="d-flex flex-column justify-content-center align-items-center"
+<div class="row g-3">
+  <div class="col-md-8">
+    <mat-card>
+      <app-chart></app-chart>
+    </mat-card>
+  </div>
+  <div class="col-md-4">
+    <div class="row g-3">
+      <div class="col-md-12">
+        <mat-card>
+          <div class="d-flex justify-content-end">
+            <!-- <button type="button" class="btn btn-primary m-3" (click)="onUpload()">Upload</button> -->
+            <mat-icon aria-hidden="false" aria-label="Example home icon"
+              >thermostat</mat-icon
             >
-              <div class="value-number text-nowrap pt-5 py-5">
-                {{ humidity }} %
-              </div>
-              <div class="value-label pb-4">ความชื้น</div>
+          </div>
+          <div
+            class="d-flex flex-column justify-content-center align-items-center"
+          >
+            <div class="value-number text-nowrap pt-3 py-5">
+              {{ temperature }} °C
             </div>
-          </mat-card>
-        </div>
+            <div class="value-label pb-2">อุณหภูมิ</div>
+          </div>
+        </mat-card>
+      </div>
 
-        <!-- <div class="pt-3"></div> -->
-
-        <div class="col">
-          <mat-card>
-            <div class="d-flex justify-content-end pb-3">
-              <mat-icon aria-hidden="false" aria-label="Example home icon"
-                >opacity</mat-icon
-              >
-            </div>
-            <div
-              class="d-flex flex-column justify-content-center align-items-center"
+      <div class="col-md-6 col-6">
+        <mat-card>
+          <div class="d-flex justify-content-end">
+            <mat-icon aria-hidden="false" aria-label="Example home icon"
+              >opacity</mat-icon
             >
-              <div class="value-number text-nowrap pt-5 py-5">
-                {{ dirtMoisture }} %
-              </div>
-              <div class="value-label pb-4">ความชื้นดิน</div>
+          </div>
+          <div
+            class="d-flex flex-column justify-content-center align-items-center"
+          >
+            <div class="value-number text-nowrap pt-3 py-5">
+              {{ humidity }} %
             </div>
-          </mat-card>
-        </div>
+            <div class="value-label pb-2">ความชื้น</div>
+          </div>
+        </mat-card>
+      </div>
+
+      <div class="col-md-6 col-6">
+        <mat-card>
+          <div class="d-flex justify-content-end">
+            <mat-icon aria-hidden="false" aria-label="Example home icon"
+              >opacity</mat-icon
+            >
+          </div>
+          <div
+            class="d-flex flex-column justify-content-center align-items-center"
+          >
+            <div class="value-number text-nowrap pt-3 py-5">
+              {{ dirtMoisture }} %
+            </div>
+            <div class="value-label pb-2">ความชื้นดิน</div>
+          </div>
+        </mat-card>
       </div>
     </div>
   </div>
+</div>
+<br />
+<div class="row g-3"></div>
 
-  <div class="row g-3 pt-4">
-    <div *ngFor="let relay of relays" class="col">
-      <mat-card
-        class="card-switch"
-        (click)="toggleSwitch(relay.name, relay.status, relay.index)"
-        matRipple
-        [matRippleCentered]="true"
+<div class="row g-3 pt-4">
+  <div *ngFor="let relay of relays" class="col">
+    <mat-card
+      class="card-switch"
+      (click)="toggleSwitch(relay.name, relay.status, relay.index)"
+      matRipple
+      [matRippleCentered]="true"
+    >
+      <div
+        class="d-flex flex-column justify-content-center align-items-center m-5"
       >
         <div
-          class="d-flex flex-column justify-content-center align-items-center m-5"
+          class="light-on-icon"
+          [class.light-on-icon]="relay.status"
+          [class.light-off-icon]="!relay.status"
         >
-          <div
-            class="light-on-icon"
-            [class.light-on-icon]="relay.status"
-            [class.light-off-icon]="!relay.status"
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            [inline]="true"
+            >lightbulb</mat-icon
           >
-            <mat-icon
-              aria-hidden="false"
-              aria-label="Example home icon"
-              [inline]="true"
-              >lightbulb</mat-icon
-            >
-          </div>
-
-          <div class="relay value-label pt-5 pb-2 noselect">
-            {{ relay.name }}
-          </div>
-          <div *ngIf="relay.status" class="relay value-label noselect">ON</div>
-          <div *ngIf="!relay.status" class="relay value-label noselect">
-            OFF
-          </div>
         </div>
-      </mat-card>
-    </div>
-  </div>
 
-  <div class="row g-3 pt-3">
-    <div class="col">
-      <mat-card
-        (click)="addTimeSetting()"
-        matRipple
-        [matRippleCentered]="true"
-        class="card-switch"
-        ><div
-          class="d-flex justify-content-center align-items-center value-label"
-        >
-          <div class="text-nowrap">เพิ่มตั้งค่าเวลา เปิด/ปิด รีเลย์</div>
-        </div></mat-card
-      >
-    </div>
-    <div class="col">
-      <mat-card
-        (click)="addTempSetting()"
-        matRipple
-        [matRippleCentered]="true"
-        class="card-switch"
-        ><div
-          class="d-flex justify-content-center align-items-center value-label"
-        >
-          <div class="text-nowrap">เพิ่มตั้งค่าอุณหภูมิ</div>
-        </div></mat-card
-      >
-    </div>
-    <div class="col">
-      <mat-card
-        (click)="settingList()"
-        matRipple
-        [matRippleCentered]="true"
-        class="card-switch"
-        ><div
-          class="d-flex justify-content-center align-items-center value-label"
-        >
-          <div class="text-nowrap">จัดการการตั้งค่าอุปกรณ์</div>
-        </div></mat-card
-      >
-    </div>
-    <div class="col">
-      <mat-card
-        (click)="systemSetting()"
-        matRipple
-        [matRippleCentered]="true"
-        class="card-switch"
-        ><div
-          class="d-flex justify-content-center align-items-center value-label"
-        >
-          <div class="text-nowrap">ตั้งค่าระบบ</div>
-        </div></mat-card
-      >
-    </div>
+        <div class="relay value-label pt-5 pb-2 noselect">
+          {{ relay.name }}
+        </div>
+        <div *ngIf="relay.status" class="relay value-label noselect">ON</div>
+        <div *ngIf="!relay.status" class="relay value-label noselect">OFF</div>
+      </div>
+    </mat-card>
   </div>
 </div>
+
+<br />
